--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -1,121 +1,81 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Tool Box</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
-
-<body>
-
-
-
-<!--<form action="/updateTool" method="post">-->
-<!--    <input type="hidden" name="id" value="10">-->
-<!--    <input type="text" name="name" placeholder="Name" required>-->
-<!--    <input type="number" name="size" placeholder="Size" required>-->
-<!--    <input type="text" name="unit" placeholder="Unit" required>-->
-<!--    <input type="text" name="actions" placeholder="Actions" required>-->
-<!--    <button type="submit">Update Tool</button>-->
-<!--</form>-->
-
-<!--<div class="container text-center ">-->
-<!--    <nav class="navbar navbar-expand bg-body-tertiary">-->
-<!--        <div class="container-fluid justify-content-center">-->
-<!--            <a class="navbar-brand" href="/">Tool Box</a>-->
-<!--            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">-->
-<!--                <div class="navbar-nav">-->
-<!--                    <a class="nav-link" href="create"><span class="span">C</span>reate</a>-->
-<!--                    <a class="nav-link" href="read"><span class="span">R</span>ead</a>-->
-<!--                    <a class="nav-link" href="update"><span class="span">U</span>pdate</a>-->
-<!--                    <a class="nav-link" href="delete"><span class="span">D</span>elete</a>-->
-<!--                    <a class="nav-link" href="search"><span class="span">S</span>earch</a>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </nav>-->
-<!--    <h1>Tool Box</h1>-->
-<!--    <img src="/img/logo.jpg" style="max-width: 300px; margin-bottom: 30px">-->
-<!--    <h3>Add new tool</h3>-->
-<!--    <div class="row">-->
-<!--        <div class="col d-flex justify-content-center">-->
-<!--            <form action="/showFormForAddp" method="post" style="justify-content: center">-->
-<!--                <div class="mb-3">-->
-<!--                    <label for="name" class="form-label">Name:</label>-->
-<!--                    <input type="text" class="form-control" id="name" name="name">-->
-<!--                </div>-->
-<!--                <div class="mb-3">-->
-<!--                    <label for="size" class="form-label">Size:</label>-->
-<!--                    <input type="number" class="form-control" id="size" name="size" step="any">-->
-<!--                </div>-->
-<!--                <div class="mb-3">-->
-<!--                    <label for="unit" class="form-label">Unit:</label>-->
-<!--                    <input type="text" class="form-control" id="unit" name="unit">-->
-<!--                </div>-->
-<!--                <div id="actionInputs" class="mb-3">-->
-<!--                    <label for="actions" class="form-label">Actions:</label>-->
-<!--                    <input type="text" class="form-control" id="actions" name="actions" placeholder="Enter action">-->
-<!--                </div>-->
-<!--                <button type="button" class="btn btn-warning" onclick="addInput()">Add Action</button>-->
-<!--                </br></br>-->
-
-<!--                <button type="submit" class="btn btn-success mb-5 p-3">Add Tool</button>-->
-<!--            </form>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
-<!--<script>-->
-<!--    function addInput() {-->
-<!--        var input = document.createElement('input');-->
-<!--        input.type = 'text';-->
-<!--        input.name = 'actions';-->
-<!--        input.placeholder = 'Enter action';-->
-<!--        input.className = 'form-control mb-2';-->
-<!--        document.getElementById('actionInputs').appendChild(input);-->
-<!--    }-->
-<!--</script>-->
-
-
+<body class="overflow-y-scroll">
 <div class="container">
-    <h3>Update Tool</h3>
-    <hr>
-    <form action="/updateTool" method="post">
-        <input type="hidden" name="id" th:value="${tool.id}">
-        <input type="text" name="name" placeholder="Name" required>
-        <button type="submit">Update</button>
-    </form>
+    <header>
+        <nav class="navbar navbar-expand bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Tool Box</a>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" th:href="@{/showFormForAdd}">Create</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" th:href="@{/read}">Read</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex" role="search" th:action="@{/findTool}" method="post">
+                        <input name="name" class="form-control me-2" type="search" placeholder="Find tool...">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+        <br>
+    </header>
+    <div class="banner">
+        <img src="/img/logo2.png" alt="Banner Image" class="img-fluid">
+    </div>
+    <div class="row">
+        <div class="col">
+            <table class="table table-bordered table-striped">
+                <thead class="table-dark">
+                <th style="text-align: center"><span>You can add any number of tools and actions for tools</span></th>
+            </table>
+            <p class="h4 mb-4">Add new Tool</p>
+            <form action="/create" method="post">
+                <input type="text" class="form-control mb-4 w-25" placeholder="Name" id="name" name="name">
+                <input type="number" class="form-control mb-4 w-25" placeholder="Size" id="size" name="size" step="any">
+                <input type="text" class="form-control mb-4 w-25" placeholder="Unit" id="unit" name="unit">
+
+                <div id="actionInputs" class="mb-3">
+                    <label for="actions" class="form-label">Actions:</label>
+                    <input type="text" class="form-control mb-4 w-25" id="actions" name="actions" placeholder="Hand tool operations">
+                </div>
+                <button type="button" class="btn btn-warning mb-3" onclick="addInput()">Add Action</button>
+                <br>
+                <button type="submit" class="btn btn-info col-2 mb-5 pb-2">Save Tool</button>
+            </form>
+        </div>
+
+        <script>
+            function addInput() {
+                var input = document.createElement('input');
+                input.type = 'text';
+                input.name = 'actions';
+                input.placeholder = 'Hand tool operations';
+                input.className = 'form-control mb-4 w-25';
+                document.getElementById('actionInputs').appendChild(input);
+            }
+        </script>
+    </div>
 </div>
-
-
-
-<!--<div class="container">-->
-<!--    <h3>Add New Tool</h3>-->
-<!--    <hr>-->
-<!--    <p class="h4 mb-4">Save Tool</p>-->
-<!--    <form action="#" th:action="@{/saveToolkit}" th:object="${tool}" method="post">-->
-<!--        <input type="hidden" th:field="*{id}">-->
-<!--        <input type="text" th:field="*{name}"-->
-<!--               class="form-control mb-4 w-25" placeholder="Name">-->
-
-<!--&lt;!&ndash;        <input type="number" th:field="*{toolSize}"&ndash;&gt;-->
-<!--&lt;!&ndash;               class="form-control mb-4 w-25" placeholder="Size">&ndash;&gt;-->
-
-<!--&lt;!&ndash;        <input type="text" th:field="*{toolSize.unit()}"&ndash;&gt;-->
-<!--&lt;!&ndash;               class="form-control mb-4 w-25" placeholder="Unit">&ndash;&gt;-->
-
-<!--        <button type="submit" class="btn btn-info col-2">Save</button>-->
-
-<!--    </form>-->
-<!--&lt;!&ndash;    <hr>&ndash;&gt;-->
-<!--    <a th:href="@{/read}">Back to Tools List</a>-->
-
-<!--</div>-->
-
+</div>
+<footer class="footer">
+    <div class="container">
+        <span class="text-muted">&copy;Kamil Kozłowski JJDZR11-HOMEWORKS TASK 4 </span>
+    </div>
+</footer>
 </body>
 </html>
-
-
-
