--- a/src/main/resources/templates/read.html
+++ b/src/main/resources/templates/read.html
@@ -5,66 +5,75 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Tool Box</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <style>.navbar {margin-bottom: -40px;}</style>
 </head>
 <body class="overflow-y-scroll">
-
-
 <div class="container">
-
-    <form action="/updateTool" method="post">
-        <input type="hidden" name="id" value="10">
-        <input type="text" name="name" placeholder="Name" required>
-        <input type="number" name="size" placeholder="Size" required>
-        <input type="text" name="unit" placeholder="Unit" required>
-        <input type="text" name="actions" placeholder="Actions" required>
-        <button type="submit">Update Tool</button>
-    </form>
-
-
-    <h3>Tool Box</h3>
-    <hr>
-    <a th:href="@{/showFormForAdd}"
-       class="btn btn-primary btn-sm mb-3">Add Tool</a>
-    <table class="table table-bordered table-striped">
-        <thead class="table-dark">
-        <tr>
-            <th>Id</th>
-            <th>Name</th>
-            <th>Size</th>
-            <th>Hand tool operations</th>
-            <th>Actions</th>
-        </tr>
-        </thead>
-
-        <tbody>
-        <tr th:each="tool : ${tools}">
-
-            <td th:text="${tool.id}"/>
-            <td th:text="${tool.name}"/>
-            <td th:text="${tool.toolSize.size} + ' ' + ${tool.toolSize.unit}"/>
-            <td>
-                <ul style="list-style-type: none">
-                    <li th:each="action : ${tool.actions}" th:text="${action}"></li>
+<header>
+    <nav class="navbar navbar-expand bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Tool Box</a>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/showFormForAdd}">Create</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/read}">Read</a>
+                    </li>
                 </ul>
-            </td>
-
-            <td>
-                <a th:href="@{/showFormForUpdate(id=${tool.id})}"
-                   class="btn btn-info btn-sm">
-                    Update
-                </a>
-                <a th:href="@{/delete(id=${tool.id})}"
-                   class="btn btn-danger btn-sm ms-1"
-                   onclick="if (!(confirm('Are you sure you want to delete this tool?'))) return false">
-                    Delete
-                </a>
-            </td>
-
-        </tr>
-        </tbody>
-    </table>
+                <form class="d-flex" role="search" th:action="@{/findTool}" method="post">
+                    <input name="name" class="form-control me-2" type="search" placeholder="Find tool...">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
+        </div>
+    </nav>
+    <br>
+</header>
+    <div class="banner">
+        <img src="/img/logo2.png" alt="Banner Image" class="img-fluid">
+    </div>
+    <div class="row">
+        <div class="col">
+            <table class="table table-bordered table-striped">
+                <thead class="table-dark">
+                <tr>
+                    <th>Id</th>
+                    <th>All Tolls Name</th>
+                    <th>Size</th>
+                    <th>Hand tool operations</th>
+                    <th>Actions</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="tool : ${tools}">
+                    <td th:text="${tool.id}"/>
+                    <td th:text="${tool.name}"/>
+                    <td th:text="${tool.toolSize.size} + ' ' + ${tool.toolSize.unit}"/>
+                    <td>
+                        <ul style="list-style-type: none">
+                            <li th:each="action : ${tool.actions}" th:text="${action}"></li>
+                        </ul>
+                    </td>
+                    <td>
+                        <a th:href="@{/showFormForUpdate(id=${tool.id})}" class="btn btn-info btn-sm">Update</a>
+                        <a th:href="@{/delete(id=${tool.id})}" class="btn btn-danger btn-sm ms-2" onclick="if (!(confirm('Are you sure you want to delete this tool?'))) return false">Delete</a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
-
+<footer class="footer">
+    <div class="container">
+        <span class="text-muted">&copy;Kamil Kozłowski JJDZR11-HOMEWORKS TASK 4 </span>
+    </div>
+</footer>
 </body>
 </html>
