--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Tool Box</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body class="overflow-y-scroll">
@@ -35,23 +36,27 @@
         <br>
     </header>
     <div class="banner">
-        <img src="/img/logo2.png" alt="Banner Image" class="img-fluid">
-    </div>
-    <div class="row">
-        <div class="col">
+        <div>
+            <img src="/img/logo2.png" alt="Banner Image" class="img-fluid">
             <table class="table table-bordered table-striped">
                 <thead class="table-dark">
                 <th style="text-align: center"><span>You can add any number of tools and actions for tools</span></th>
             </table>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-6">
+
             <p class="h4 mb-4">Add new Tool</p>
             <form action="/create" method="post">
-                <input type="text" class="form-control mb-4 w-25" placeholder="Name" id="name" name="name">
-                <input type="number" class="form-control mb-4 w-25" placeholder="Size" id="size" name="size" step="any">
-                <input type="text" class="form-control mb-4 w-25" placeholder="Unit" id="unit" name="unit">
+                <input type="text" class="form-control mb-4 w-30" placeholder="Name" id="name" name="name">
+                <input type="number" class="form-control mb-4 w-30" placeholder="Size" id="size" name="size" step="any">
+                <input type="text" class="form-control mb-4 w-30" placeholder="Unit" id="unit" name="unit">
 
                 <div id="actionInputs" class="mb-3">
                     <label for="actions" class="form-label">Actions:</label>
-                    <input type="text" class="form-control mb-4 w-25" id="actions" name="actions" placeholder="Hand tool operations">
+                    <input type="text" class="form-control mb-4 w-30" id="actions" name="actions"
+                           placeholder="Hand tool operations">
                 </div>
                 <button type="button" class="btn btn-warning mb-3" onclick="addInput()">Add Action</button>
                 <br>
@@ -65,10 +70,14 @@
                 input.type = 'text';
                 input.name = 'actions';
                 input.placeholder = 'Hand tool operations';
-                input.className = 'form-control mb-4 w-25';
+                input.className = 'form-control mb-4 w-40';
                 document.getElementById('actionInputs').appendChild(input);
             }
         </script>
+        <div class="col-6">
+            <img src="/img/img1.png" alt="Logo" class="img-fluid float-end">
+        </div>
+
     </div>
 </div>
 </div>
