--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -52,8 +52,13 @@
 
             <p class="h4 mb-4">Add new Tool</p>
             <form action="/create" method="post">
+                <label for="name" class="form-label">Name:</label>
                 <input type="text" class="form-control mb-4 w-30" placeholder="Name" id="name" name="name">
+
+                <label for="size" class="form-label">Size:</label>
                 <input type="number" class="form-control mb-4 w-30" placeholder="Size" id="size" name="size" step="any">
+
+                <label for="unit" class="form-label">Unit:</label>
                 <input type="text" class="form-control mb-4 w-30" placeholder="Unit" id="unit" name="unit">
 
                 <div id="actionInputs" class="mb-3">
