--- a/src/main/resources/templates/read.html
+++ b/src/main/resources/templates/read.html
@@ -64,7 +64,7 @@
                         </ul>
                     </td>
                     <td>
-                        <a th:href="@{/u2/{id}(id=*{id})}" class="btn btn-info btn-sm">Update</a>
+                        <a th:href="@{/update/{id}(id=*{id})}" class="btn btn-info btn-sm">Update</a>
                         <a th:href="@{/delete(id=${tool.id})}" class="btn btn-danger btn-sm ms-2" onclick="if (!(confirm('Are you sure you want to delete this tool?'))) return false">Delete</a>
                     </td>
                 </tr>
