--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,59 +1,28 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Tool Box</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" th:href="@{/css/style.css}"/>
-</head>
+
+<head th:replace="~{/fragments::head}"></head>
+
 <body class="overflow-y-scroll">
 <div class="container">
-    <header>
-        <nav class="navbar navbar-expand bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Tool Box</a>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" href="/">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{/showFormForAdd}">Create</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{/read}">Read</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://github.com/KozlowskiKamil">Contact</a>
-                        </li>
-                    </ul>
-                    <form class="d-flex" role="search" th:action="@{/findTool}" method="post">
-                        <input name="name" class="form-control me-2" type="search" placeholder="Find tool...">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
-                </div>
-            </div>
-        </nav>
-        <br>
-    </header>
-    <div class="banner">
-        <img src="/img/logo2.png" alt="Banner Image" class="img-fluid">
-    </div>
+
+    <header th:replace="~{/fragments::header}"></header>
+
     <div class="row">
         <div class="col">
+
             <table class="table table-bordered table-striped">
                 <thead class="table-dark">
-                    <th style="text-align: center"><span>Welcome. Nice to see you on the website. It will also be nice to see 15 points</span></th>
+                <th style="text-align: center"><span>Welcome. Nice to see you on the website. It will also be nice to see 15 points</span>
+                </th>
             </table>
             <div><img src="/img/toolbox.png"></div>
         </div>
     </div>
 </div>
-<footer class="footer">
-    <div class="container">
-        <span class="text-muted">&copy;Kamil Kozłowski JJDZR11-HOMEWORKS TASK 4 </span>
-    </div>
-</footer>
+
+<footer th:replace="~{/fragments::footer}"></footer>
+
 </body>
+
 </html>
