--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Tool Box</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" th:href="@{/css/style.css}" />
-</head>
+
+<head th:replace="~{/fragments::head}"></head>
+
 <body class="overflow-y-scroll">
 <div class="container">
     <header>
@@ -48,9 +43,9 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-6 pb-5 mb-5">
+        <div class="col-6">
 
-            <p class="h4 mb-4" style="color: deepskyblue">Edit tool</p>
+            <p class="h4 mb-4">Edit tool</p>
             <form th:action="@{/update/{id}(id=*{id})}" method="post" th:object="${toolUpdateDTO}">
                 <label for="name" class="form-label">Name:</label>
                 <input th:field="*{name}" type="text" class="form-control mb-4 w-30" placeholder="Name" id="name" name="name" required>
@@ -91,10 +86,7 @@
     </div>
 </div>
 </div>
-<footer class="footer">
-    <div class="container">
-        <span class="text-muted">&copy;Kamil Kozłowski JJDZR11-HOMEWORKS TASK 4 </span>
-    </div>
-</footer>
+<footer th:replace="~{/fragments::footer}"></footer>
+
 </body>
 </html>
