--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -53,7 +53,7 @@
                 <input th:field="*{name}" type="text" class="form-control mb-4 w-30" placeholder="Name" id="name" name="name" required>
 
                 <label for="size" class="form-label">Size:</label>
-                <input th:field="*{size}" type="number" class="form-control mb-4 w-30" placeholder="Size" id="size" name="size" step="any" required>
+                <input th:field="*{size}" type="number" class="form-control mb-4 w-30" placeholder="Size" id="size" name="size" step="any" min="0" required>
 
                 <label for="unit" class="form-label">Unit:</label>
                 <input th:field="*{unit}" type="text" class="form-control mb-4 w-30" placeholder="Unit" id="unit" name="unit" required>
@@ -87,7 +87,7 @@
 
     </div>
 </div>
-</div>
+
 <footer th:replace="~{/fragments::footer}"></footer>
 
 </body>
