--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,7 @@
         <div class="col">
             <table class="table table-bordered table-striped" style="font-size: larger">
                 <thead class="table-dark">
-                <th style="text-align: center"><span>Welcome. Nice to see you on the website. It will also be nice to see 15 points</span>
+                <th style="text-align: center"><span>Welcome. Nice to see you on the website.</span>
                 </th>
             </table>
             <div><img src="/img/toolbox.png"></div>
