--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -15,7 +15,7 @@
 <header th:fragment="header">
     <nav class="navbar navbar-expand bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" th:href="@{/read}">Tool Box</a>
+            <a class="navbar-brand" th:href="@{/}">Tool Box</a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
